Tue Mar 27 21:15:24 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype.cpp:
        
          Fixed a bug in the logic when determining if the valuetype
          supports an abstract interface or not.

Tue Mar 27 19:36:40 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Abstract_Interface/run_test.pl:
          Made this script working for VxWorks

Tue Mar 27 18:00:26 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * orbsvcs/examples/RtEC/Kokyu/Service.cpp

          Unused argument warning.

Tue Mar 27 17:50:38 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * examples/Load_Balancing_persistent/Load_Balancer_i.cpp

          Fixes for strict aliasing warnings.

        * examples/Load_Balancing_persistent/Identity_Server.cpp

          Added logic to bail if it gets invalid group references
          from the load balancing daemon.

Tue Mar 27 13:56:40 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_933_Regression/*:
          New regression for bug 933. TAO didn't had a bug, the regression
          posted by the reporter had several. Fixed the regression and
          adding it now to svn. Thanks to Ruwanganie Gunatilleke
          <ru at ociweb dot com> for making the regression

Tues Mar 27 09:35:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests/Big_Request_Muxing/client.cpp:

          Allow time for the server to process messages at the other end
          of the tcpip link before the client destroies the sockets and
          rips down any pending messages it may have still buffered up.
          Note this is ONLY for the benifit of the SYNC_NONE and
          SYNC_WITH_TRANSPORT messages to improve the stats a bit.

Tues Mar 27 08:15:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests/Big_Request_Muxing/run_test.pl:

          Allow the new timeouts to actually take effect before
          timing out the test!
